# Vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Vox.sln
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/Source/: SandboxApp.cpp
Vox/: CMakeLists.txt  Vox.vcxproj  Vox.vcxproj.bak  Vox.vcxproj.filters
Vox/Source/: Vox.h  pch.h
Vox/Source/Core/: Application.cpp  Application.h  Input.cpp  KeyCodes.h  Log.h  ResourceManager.cpp  ResourceManager.h  TypeMap.h  Types.h  Window.cpp
Vox/Source/Core/Components/: Component.h  SpriteRenderer.h  Transform.h
Vox/Source/Core/Resource/: ResourceManager.cpp  ResourceManager.h  SpriteShaderV.shader
Vox/Source/Events/: Event.h  EventDispatcher.h  KeyEvents.h  MouseEvents.h  SystemEvents.h
Vox/Source/Rendering/: Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Vox/Source/Scene/: ComponentContainer.h  ComponentList.h  ComponentType.h  Entity.h  EntityComponentManager.cpp  EntityComponentManager.h
Vox/Source/Scene/Systems/: SpriteRendererSystem.h  System.h  SystemManager.cpp  SystemManager.h  TestSystem.h
Vox/Source/Vox/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
Vox/Source/Vox/Core/: Core.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  MouseCodes.h
Vox/Source/Vox/Events/: Event.h  EventDispatcher.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Vox/Source/Vox/Scene/: ComponentType.h  EntityComponentManager.h
